@@ -3,27 +3,24 @@ package org.samo_lego.fabrictailor.client.screen.tabs;
 import com.google.common.net.InternetDomainName;
 import com.google.gson.JsonObject;
 import com.mojang.authlib.minecraft.MinecraftProfileTexture;
-import com.mojang.authlib.properties.Property;
-import com.mojang.datafixers.util.Pair;
 import net.minecraft.client.player.LocalPlayer;
-import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
-import org.samo_lego.fabrictailor.network.SkinPackets;
+import org.samo_lego.fabrictailor.network.payload.HDSkinPayload;
+import org.samo_lego.fabrictailor.network.payload.VanillaSkinPayload;
 import org.samo_lego.fabrictailor.util.SkinFetcher;
 import org.samo_lego.fabrictailor.util.TextTranslations;
 
 import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
+import java.awt.image.*;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 
 import static org.samo_lego.fabrictailor.FabricTailor.config;
-import static org.samo_lego.fabrictailor.network.SkinPackets.FABRICTAILOR_HD_CHANGE;
-import static org.samo_lego.fabrictailor.network.SkinPackets.FABRICTAILOR_VANILLA_CHANGE;
 
 public class UrlSkinTab implements SkinTabType {
 
@@ -54,23 +51,21 @@ public class UrlSkinTab implements SkinTabType {
 
 
     @Override
-    public Optional<Pair<ResourceLocation, FriendlyByteBuf>> getSkinChangePacket(LocalPlayer player, String url, boolean useSlim) {
-        Property skinData;
-        ResourceLocation channel;
+    public Optional<CustomPacketPayload> getSkinChangePacket(LocalPlayer player, String url, boolean useSlim) {
         try {
-            URL skinUrl = new URL(url);
+            URL skinUrl = URI.create(url).toURL();
             BufferedImage image = ImageIO.read(skinUrl);
             int height = image.getHeight();
             int width = image.getWidth();
 
             if (width == 64 && (height == 32 || height == 64)) {
                 // Normal skin (vanilla compatible)
-                skinData = SkinFetcher.fetchSkinByUrl(url, useSlim);
+                var skinData = SkinFetcher.fetchSkinByUrl(url, useSlim);
 
                 if (skinData == null)
                     return Optional.empty();
 
-                channel = FABRICTAILOR_VANILLA_CHANGE;
+                return Optional.of(new VanillaSkinPayload(skinData));
             } else {
                 // HD skin (not vanilla compatible)
                 JsonObject metadata = null;
@@ -87,14 +82,13 @@ public class UrlSkinTab implements SkinTabType {
                     url = "https://external-content.duckduckgo.com/iu/?u=" + skinUrl;
                 }
 
-                skinData = this.getExtendedProperty(player, MinecraftProfileTexture.Type.SKIN, url, metadata);
-                channel = FABRICTAILOR_HD_CHANGE;
+                var skinData = this.getExtendedProperty(player, MinecraftProfileTexture.Type.SKIN, url, metadata);
+                return Optional.of(new HDSkinPayload(skinData));
             }
 
         } catch (IOException ignored) {
             return Optional.empty();
         }
 
-        return Optional.of(new Pair<>(channel, SkinPackets.skin2ByteBuf(skinData)));
     }
 }
